# transportation-problem

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: __init__.py  models.py  solvers.py
